--- a/help.html
+++ b/help.html
@@ -57,7 +57,7 @@
     <li>
         <strong>Help:</strong>
         <ul>
-            <li>If you need assistance, type <code>help</code> for a list of available commands.</li>
+            <li>If you need assistance, type <code>***help</code> for a list of available commands.</li>
         </ul>
     </li>
     <li>
@@ -112,7 +112,7 @@
     </li>
 </ul>
 
-<p>We hope you have a great chatting experience! If you have any further questions or issues, type <code>help</code> or contact our support team.</p>
+<p>We hope you have a great chatting experience! If you have any further questions or issues, type <code>***help</code> or contact our support team.</p>
 
 <p>Happy chatting!</p>
 
